<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_map">

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.routeplanner.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_routes"
        android:name="com.example.routeplanner.ui.routes.RoutesFragment"
        android:label="@string/title_routes"
        tools:layout="@layout/fragment_routes" >
        <action
            android:id="@+id/action_navigation_routes_to_routeFragment"
            app:destination="@id/routeFragment"
            app:popUpTo="@id/navigation_routes" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.example.routeplanner.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/routeFragment"
        android:name="com.example.routeplanner.ui.routes.RouteFragment"
        android:label="Route"
        tools:layout="@layout/fragment_route" />

</navigation>